# bruh.finance

./: .env-sample  .gitignore  README.md  docker-compose.yaml  index.html  package-lock.json  text.txt  vite.config.ts
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  sample.config.json
backend/api/: admin.py  api.py  apps.py  models.py  signals.py
backend/api/features/finance/: controller.py  models.py  schemas.py  signals.py  utils.py
backend/api/features/finance/controllers/: category_controller.py  expense_controller.py  finance_account_controller.py  (+7 more)
backend/api/features/users/: consumers.py  controller.py  models.py  permissons.py  schemas.py
backend/api/management/commands/: create_profiles.py  ensure_superuser.py
backend/api/middleware/: logging_middleware.py  websocket_jwt_auth_middleware.py
backend/api/migrations/: 0001_initial.py  0002_expense_financeaccount_paycheck_recurringbill.py  0003_paycheck_second_day_of_month.py  0004_expense_related_bill.py  0005_expense_finance_account_paycheck_finance_account_and_more.py  0006_remove_recurringbill_color_category_and_more.py  0007_alter_category_color.py  0008_category_deleted_at_category_is_deleted_and_more.py  0009_savingsaccount_savingsrecurringdeposit_and_more.py  0010_savingsrecurringdeposit_is_payroll_deposit.py  0011_recurringbill_day_of_week_recurringbill_frequency_and_more.py  0012_profile_status.py  0013_alter_expense_amount_and_more.py
backend/config/: __init__.py  asgi.py  routing.py  settings.py  urls.py
backend/core/services/: __init__.py  config_service.py
(+143 files in other folders)
